visites en record et enlever trucs inutiles